--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 
     <title>React App</title>
 
-    <link rel="icon" type="image/x-icon" href="https://oeson.b-cdn.net/New%20folder/Oeson%20Logo%20PNG.png" />
+    <!--  <link rel="icon" type="image/x-icon" href="https://oeson.b-cdn.net/New%20folder/Oeson%20Logo%20PNG.png" />  -->
+    <link rel="icon" type="image/x-icon" href="Oeson-Logo-PNG.svg" />
     <link rel="stylesheet" href="./styles.css">
 
     <!--Google font-->
